# ANBToolKit

./: .gitignore  README.md  complexfam.txt  myfam.txt  pyproject.toml
ANBToolKit/: Constants.py  DGU.py  DGUgen.py  DGUhand.py  FSGram.py  FSGramTokens.py  RS.fsgram  RootSorter.py  cons.py  dgu2pdf.md  formats.dgu  h1-viagemCaboVerde.tex  h2-moto4.dgu  h2.anbnote  test.py  texbook.aux  texbook.fdb_latexmk  texbook.fls  texbook.ilg  texbook.tex  universe.dgu
Data/: AncestorsNotebook.md  README.md  notes.md
Doc/: diario.md  tarefas.md
Doc/ANB/: LICENSE  pyproject.toml  test.tex
Doc/ANB/anbtk/: Constants.py  DGUhand.py  FSGram.py  FSGramTokens.py  __init__.py  anbsafeonto.rdf  argsConfig.py  auxiliar.py  blocks.py  calls.py  complexfam.txt  controlsystem.py  dataControl.py  dguObject.py  family_tree.py  fsParse.py  genealogia.py  htmlLogic.py  onto.py  ontology.py  parser.out  parsetab.py  projectionEditor.py  skeletons.py  sparql_queries.py  test.txt  tests.py  tobeused  universe.dgu  visualizer.py
Doc/ANB/anbtk/DSL/: FSGram.py  gramLogic.py
Doc/ANB/anbtk/DSL/entities/: FSGram.py  FSGramTokens.py  gramLogic.py  save.py  savetokens.py
Doc/ANB/anbtk/DSL/family/: SAVE.py  gramma.py  parser.out  parsetab.py
Doc/ANB/anbtk/actions/: book.py  connections.py  gen_dgus.py  latex.py
Doc/ANB/anbtk/anbPE/: blocks.py  handlers.py  projectionEditor.py  sparql_queries.py  view.py
Doc/ANB/anbtk/auxiliar/: argsConfig.py  calls.py  constants.py  dgu_helper.py  skeletons.py
Doc/ANB/anbtk/dgu/: DGUhand.py
Doc/ANB/anbtk/filters/: filters.py  queries.py  sparql_queries.py  view_sparql.py
Doc/ANB/anbtk/gedcom/: converter.py  gedcom.ged
Doc/ANB/anbtk/olimpo/: controlsystem.py  dgu.py  genealogia.py  gramma.py  main.py  mightbeuseful.py  parsetab.py  skeletons.py  sparql_queries.py
Doc/ANB/anbtk/ontology/: individuals.py  ousia.py
Doc/ANB/anbtk/templates/: anb1.j2  anb2.j2  anb3.j2  anb_productions.j2
ManuelVilar/: _.html  (+5 more)
(+201 files in other folders)
