[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "anbtk"
authors = [{name = "Duarte Vilar", email = "duartevilar99@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/mishlawi/ANBToolKit"

[project.scripts]
dgu2tex = "anbtk:dgu2tex"
dgu2texbook = "anbtk:dgu2texbook"
tex2dgu = "anbtk:tex2dgu"
dgubook = "anbtk:dgubook"
genStory = "anbtk:genStory"
anb = "anbtk:anb"

